Expand curated arXiv list to 20 papers and add PDFs

--- a/docs/arxiv/bibtex.bib
+++ b/docs/arxiv/bibtex.bib
@@ -18,3 +18,17 @@
   year={2025},
   howpublished={arXiv:2505.00252}
 }
+
+@misc{synchronizing_probs_2601,
+  title={Synchronizing Probabilities in Model-Driven Lossless Compression},
+  author={Adler, Aviv and Tang, Jennifer},
+  year={2026},
+  howpublished={arXiv:2601.10678}
+}
+
+@misc{fatrq_2601,
+  title={FaTRQ: Tiered Residual Quantization for LLM Vector Search},
+  author={Zhang, Tianqi and Ponzina, Flavio and Rosing, Tajana},
+  year={2026},
+  howpublished={arXiv:2601.09985}
+}
